# echo

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  LICENSE  README.md
shader/: cook_torrance.frag  gbuffer.frag  gbuffer.vert  ibl_brdflut.frag  ibl_brdflut.vert  ibl_environment.frag  ibl_environment.vert  ibl_irradiance.frag  ibl_irradiance.vert  ibl_prefiltered.frag  ibl_prefiltered.vert  joint_bilateral_denoise.comp  pathtracer_cook_torrance.comp  pathtracer_cook_torrance_ggx.comp  pathtracer_cook_torrance_ggx_cos.comp  pathtracer_cook_torrance_mis.comp  pathtracer_lambertian.comp  pathtracer_lambertian_bvh.comp  pathtracer_lambertian_bvh_spp.comp  pathtracer_lambertian_bvh_spp_nee.comp  shader.frag  shader.vert  shadow.frag  shadow.vert  sigma_clip_denoise.comp  skybox.frag  skybox.vert  svg_filter.comp
src/: camera.cpp  ibl_renderer.cpp  ibl_renderer.hpp  imgui_manager.cpp  imgui_manager.hpp  input_manager.hpp  main.cpp  path_tracing_pipeline.cpp  path_tracing_pipeline.hpp  path_tracing_resource_manager.cpp  path_tracing_resource_manager.hpp  render_pipeline.cpp  render_pipeline.hpp  render_target.cpp  render_target.hpp  resource_manager.cpp  resource_manager.hpp  shadow_mapping.cpp  shadow_mapping.hpp  swap_chain_manager.cpp  swap_chain_manager.hpp  texture_resource_manager.cpp  texture_resource_manager.hpp  vertex.hpp  vertex_resource_manager.cpp  vertex_resource_manager.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_utils.cpp  vulkan_utils.hpp  window_manager.hpp
src/app/: echo.hpp  echo_offline.hpp  main.cpp
src/platform/: input_manager.hpp  window_manager.cpp  window_manager.hpp
src/renderer/deferred_rendering/: gbuffer_pass.cpp  gbuffer_pass.hpp  gbuffer_resource_manager.cpp  gbuffer_resource_manager.hpp
src/renderer/forward_rendering/: render_pipeline.cpp  render_pipeline.hpp
src/renderer/image_based_lighting/: ibl_renderer.cpp  ibl_renderer.hpp
src/renderer/ray_tracing/: path_tracing_pipeline.cpp  path_tracing_pipeline.hpp  path_tracing_resource_manager.cpp  path_tracing_resource_manager.hpp  svg_filter_pass.cpp  svg_filter_pass.hpp  svg_filter_resource_manager.cpp  svg_filter_resource_manager.hpp
src/renderer/shadow/: shadow_mapping.cpp  shadow_mapping.hpp
src/rhi/: command_manager.cpp  command_manager.hpp  render_target.cpp  render_target.hpp  swap_chain_manager.cpp  swap_chain_manager.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_utils.cpp  vulkan_utils.hpp
src/scene/: camera.cpp  camera.hpp  texture_resource_manager.cpp  texture_resource_manager.hpp  vertex.hpp  vertex_resource_manager.cpp  vertex_resource_manager.hpp
src/ui/: imgui_manager.cpp  imgui_manager.hpp
